@@ -1,0 +1,27 @@
+# $NetBSD: Makefile.common,v 1.1 2006/07/14 21:41:42 jlam Exp $
+
+DISTNAME=		tnftp-20050625
+SVR4_PKGNAME=		tnftp
+MASTER_SITES=		# empty
+DISTFILES=		# empty
+
+# distfile obtained from: ftp://ftp.NetBSD.org/pub/NetBSD/misc/tnftp
+
+MAINTAINER=		lukem@NetBSD.org
+COMMENT=		The enhanced FTP client in NetBSD
+
+GNU_CONFIGURE=		YES
+
+NO_CHECKSUM=		yes
+NO_MTREE=		yes
+
+FILESDIR=		${.CURDIR}/../../net/tnftp/files
+PKGDIR=			${.CURDIR}/../../net/tnftp
+
+OPSYSVARS+=		MAKE_ENV
+MAKE_ENV.SunOS+=	CPPFLAGS=""
+
+.include "../../mk/bsd.prefs.mk"
+
+do-extract:
+	@${CP} -R ${FILESDIR} ${WRKSRC}
